# ELORA-personal-AI

./: LICENSE  README.md
ai-assistant-mvp/: README.md  requirements.txt
ai-assistant-mvp/backend/: ai_assistant.db  pyproject.toml
ai-assistant-mvp/backend/app/: auth.py  biometrics.py  crisis.py  db.py  main.py  models.py  qa.py  rate_limit.py  schemas.py  security.py
ai-assistant-mvp/backend/app/connectors/: email_sender.py  telegram_bot.py  whatsapp_twilio.py
ai-assistant-mvp/frontend/: app.js  index.html  styles.css
